resources/dsaas-stg/dsaas-preview/che.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: rhche-redirector
  name: che
spec:
  host: che.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rhche-redirector
    weight: 100
  wildcardPolicy: None
